# APTP-Healthcare-Assignment

./: _todo.md  domain.pddl  notes.md  pb1.pddl  report.md  report_v2.md  sas_plan
_other/: experiments_notes.md
_other/pb5_tests/: problem.pddl
pb1/: Dockerfile  _pb_test_patients.pddl  domain.pddl  dw_sas_plan  output.sas  pb.pddl  pb1.pddl  problem.pddl  problem.pddl.plan  run_dw.sh  sas_plan  single_problem_results.csv
pb1/plans/: sas_plan  sas_plan_lama_first  sas_plan_lazy_greedy_ff
pb1/results/: _pb_test_patients.pddl.plan  sas_plan.1  sas_plan.2  sas_plan_astar
pb1/scaling/: scaling_results.csv
pb1/scripts/: downward_configurations_guide.md  test_configurations.sh
pb2/: domain.pddl  domain_fluents.pddl  ff_results.csv  pb.pddl  pb2.pddl  pb_3B_1P_2L.pddl  pb_3B_1P_2L.pddl.plan  run_dw.sh  run_ff.sh  sas_plan  sas_plan.2  scaling_analysis.ipynb
pb2/_others/: _domain_fluents.pddl  _pb_tests.pddl  _pb_tests.pddl.plan
pb2/results/: sas_plan.1
pb2/scaling/: dw_results.csv  output.sas  run_exp_downward.sh  run_ff.sh  scaling_analysis.ipynb  scaling_results_ff_with_patient_near.csv
pb3/: domain-problem.psas  domain.hddl  domain_mess.hddl  domain_no_carrier.hddl  pb2.hddl  problem.hddl  problem.txt  problem_c1_cr1_u2.hddl  problem_c1_cr1_u2.txt  problem_c1_cr2.hddl  problem_c3_cr2_u2.hddl  problem_c3_cr3.hddl  problem_c8_cr2_u2.txt  problem_easier.hddl  problem_easier.txt  problem_mess.hddl  problem_no_carrier.hddl  problem_no_carrier.txt  problem_old.hddl
pb3/results/: problem_easier.txt
pb3/scalability/: problem_c3_cr2_u2.hddl  problem_c3_cr2_u2.txt  problem_c3_cr3.hddl  problem_c4_cr2_u2_longer.hddl  problem_c4_cr2_u2_longer.txt  problem_c8_cr2_u2.hddl  problem_c8_cr4.hddl  (+1 more)
pb4/: domain.pddl  problem.pddl  problem.txt  problem_harder.pddl  problem_harder.txt  problem_harder_optic.txt
pb5/: Dockerfile-humble  domain.pddl  problem.pddl
pb5/plansys2_healthcare_example/: CMakeLists.txt  package.xml
pb5/plansys2_healthcare_example/launch/: commands  commands copy  plansys2_healthcare_example_launch.py
pb5/plansys2_healthcare_example/pddl/: domain.pddl  domain_popf.pddl
pb5/plansys2_healthcare_example/src/: drop_action_node.cpp  empty_action_node.cpp  fill_action_node.cpp  move_carrier_action_node.cpp  move_robot_action_node.cpp  pick_up_action_node.cpp
pb5_tests/: domain.pddl
(+80 files in other folders)
